* Velo overlay and motion blur is now default off in default config.
* Velo minimum font size is now 16.
* Source 2013 mods can now be started by overriding the -game param.
* Fixed the launcher not reading more than 2 Steam libraries.
* Fixed CSGO spec showing the wrong player velo.
* Fix crash if wanted velo font is not installed.

Version 35, 10 October 2021
--------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2

* Steam games are automatically scanned for by the launcher and no manual setup needs to be done.
* Sound is now included as a new fast technique has been found for all games.
* Performance has been improved by a lot (20%+).
* Velocity text performance has been improved by a lot (34%+).
* More helpful error messages.
* Profiles are now in a INI style format that allows comments and does not have escaping nonsense and format nonsense as JSON (easily editable).
* Hardware support is checked in the launcher. SVR cannot be used if the hardware is not supported.
* Launch parameters to use in the launcher is read from Steam (needs Steam to be running).
* Logging is now done to SVR_LOG.TXT, and not a hard to use console window (but the launcher still uses it - things are logged to both). This text file can easily be shared and contains useful information.
* Identifying information about the graphics adapter and HW/OS is now logged for troubleshooting hardware issues.
* The launcher now stores information about the tested game builds so we can see if the installed game version differs from the tested version (a warning will be logged).
* Autostarting a game still works the same as before, by using "svr_launcher.exe <app_id>".
* The profiles have been made simpler and the documentation for each setting is included in the profile file directly.
* The video pixel format is now chosen from the encoder, and is not settable.
* The video color range is no longer settable.